<resources>
    <string name="app_name">RTSPViewer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="streams">Streams</string>
    <string name="add_stream">Add Stream</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="error_stream_name">Enter a name with at least 3 characters</string>
    <string name="error_stream_url">Enter a valid rtsp url for this stream</string>
    <string name="view_stream">View stream</string>
</resources>
